--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -5,7 +5,7 @@
         padding: 24px 0 0 !important;
         max-width: 80% !important;
     }
-    .MuiMenu-paper {
+    .btn-header-drop > .MuiMenu-paper {
         right: 10% !important;
         left: unset !important;
     }
@@ -15,13 +15,16 @@
     .flex-space.pt-48 > div > button {
         padding: 16px 25px !important;
     }
+    .flex-grid4 {
+        grid-template-columns: 1fr 1fr 1fr !important;
+    }
 }
 
 @media screen and (max-width: 1200px) {
     .home-body {
         max-width: 90% !important;
     }
-    .MuiMenu-paper {
+    .btn-header-drop > .MuiMenu-paper {
         right: 5% !important;
     }
     .img-bottom-dot {
@@ -195,6 +198,9 @@
     .mt-16 {
         margin-top: 0 !important;
     }
+    .flex-grid4 {
+        grid-template-columns: 1fr 1fr 1fr 1fr !important;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -286,9 +292,6 @@
     .calculator-body {
         max-width: 90% !important;
     }
-    .flex-grid4 {
-        grid-template-columns: 1fr 1fr 1fr !important;
-    }
     .flex-mobile {
         display: block !important;
         grid-template-columns: 1fr 1fr;
@@ -296,6 +299,18 @@
     }
     .mt-16 {
         margin-top: 10px !important;
+    }
+    .flex-grid4 {
+        grid-template-columns: 1fr 1fr 1fr !important;
+    }
+    .MuiTableCell-root.MuiTableCell-body {
+        font-size: 12px !important;
+        font-weight: 800 !important;
+        line-height: 24px !important;
+    }
+    .MuiTableCell-root.MuiTableCell-body.MuiTableCell-alignRight {
+        font-size: 14px !important;
+        font-weight: 700 !important;
     }
 }
 @media screen and (max-width: 600px) {
@@ -317,6 +332,9 @@
     }
     .txt-16 {
         font-size: 14px !important;
+    }
+    .footer-title-h.txt-16 {
+        font-size: 16px !important;
     }
     .txt-line-60 {
         line-height: 36px !important;
@@ -410,7 +428,7 @@
         max-width: unset !important;
         min-width: 400px !important;
         min-height: auto !important;
-        background-image: url("../img/rectangle-mobile.png") !important;
+        background-image: url("../img/rectangle-mobile.svg") !important;
     }
     .rectangle-p {
         margin-top: 50px;
@@ -460,6 +478,9 @@
     }
     .modal-body {
         max-width: 90% !important;
+    }
+    .flex-space.pt-48 > .warning {
+        width: 45% !important;
     }
 }
 
@@ -964,7 +985,7 @@ body {
     max-width: 100%;
     height: 0;
 
-    background-image: url("../img/header-bg.png"), url("../img/header-bg-left.png");
+    background-image: url("../img/header-bg.png"), url("../img/header-bg-left.svg");
     background-size: calc(100% - 50px), 159px, 100%;
     background-position: top 35px right, top left;
 }
@@ -1005,11 +1026,11 @@ body {
 }
 .product-bg {
     padding-top: 125%;
-    background-image: url("../img/product.png");
+    background-image: url("../img/product.svg");
 }
 .calculator-bg {
     padding-top: 117%;
-    background-image: url("../img/bg-calculator.png");
+    background-image: url("../img/bg-calculator.svg");
 }
 .img-bottom-dot {
     position: absolute;
@@ -1066,7 +1087,7 @@ body {
     min-height: 683px;
     font-size: 18px;
 
-    background-image: url("../img/bg-pasta.png");
+    background-image: url("../img/bg-pasta.svg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1082,7 +1103,7 @@ body {
     width: 600px;
     height: 100%;
 
-    background-image: url("../img/rectangle.png");
+    background-image: url("../img/rectangle.svg");
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -1137,6 +1158,9 @@ body {
     color: var(--col-icon-bg);
     background-color: var(--col-table-th);
     word-break: break-all;
+}
+.table-first-td {
+    min-width: 120px;
 }
 .location-check {
     padding: 36px 24px;
@@ -1219,7 +1243,7 @@ body {
     padding-top: 132%;
     width: 100%;
     max-width: 100%;
-    background-image: url("../img/bg-reklams.png");
+    background-image: url("../img/bg-reklams.svg");
     background-size: 100%;
     background-position: left;
 }
@@ -1320,12 +1344,16 @@ body {
     width: 100% !important;
     max-width: 412px !important;
 }
-.MuiNativeSelect-select.MuiNativeSelect-select {
+.MuiSelect-select.MuiSelect-select {
     margin-top: 10px;
     font-size: 14px;
     font-weight: 700;
     color: var(--col-main-black);
 }
+.calc-select.MuiListItem-gutters {
+    padding: 5px 10px !important;
+}
+
 .items-border {
     border: 1px solid var(--col-grey-3);
 }
@@ -1336,15 +1364,15 @@ body {
 }
 .circle-check-position {
     position: absolute;
-    top: 7px;
-    right: 7px;
+    top: 3px;
+    right: 3px;
 }
 .warning-icon {
     margin-right: 8px;
     width: 16px;
 }
 .flex-space.pt-48 > .warning {
-    width: 50%;
+    width: 30%;
     text-align: left;
 }
 .justify-left.warning {
@@ -1401,7 +1429,7 @@ body {
 .MuiPaper-root {
     margin-top: 50px;
 }
-.MuiMenuItem-root {
+.btn-header-drop > .MuiMenu-paper > ul > .MuiMenuItem-root {
     justify-content: center !important;
     width: 69px !important;
     height: 48px !important;
@@ -1413,9 +1441,9 @@ body {
 .MuiListItem-gutters {
     padding: 0 !important;
 }
-.MuiMenu-paper {
+.btn-header-drop > .MuiMenu-paper {
     left: unset !important;
-    right: calc(50vw - 555px);
+    right: calc(50vw - 561px);
 }
 .MuiButton-text {
     padding-right: unset !important;
@@ -1423,6 +1451,15 @@ body {
 /**
  * button
  */
+.MuiButtonBase-root,
+.MuiTableCell-root.MuiTableCell-body {
+    font-family: 'Mulish', sans-serif !important;
+}
+.MuiButtonBase-root {
+    font-size: 16px !important;
+    font-weight: 800 !important;
+    line-height: 27px !important;
+}
 .MuiButtonBase-root.btn-bg-color,
 .MuiButtonBase-root.btn-bg-hover,
 .MuiButtonBase-root.btn-col {
@@ -1431,7 +1468,7 @@ body {
     text-transform: none;
 }
 .MuiButtonBase-root.btn-bg-color {
-    background-color: var(--col-btn-main-bg) !important;
+    background-color: var(--col-btn-main-bg);
     color: var(--col-white) !important;
 }
 .MuiButtonBase-root.btn-bg-hover {
@@ -1440,11 +1477,13 @@ body {
 }
 .MuiButtonBase-root.btn-col {
     border: 1px solid var(--col-btn-main-bg);
-    background-color: var(--col-btn-main-bg) !important;
-    color: var(--col-white) !important;
+    background-color: var(--col-white);
+    color: var(--col-btn-main-bg) !important;
 }
-.MuiButtonBase-root.btn-col:hover {
-    background-color: var(--col-white) !important;
+.btn-border {
+    border: 1px solid var(--col-btn-main-bg) !important;
+}
+.btn-border:hover {
     color: var(--col-btn-main-bg) !important;
 }
 .MuiButtonBase-root.btn-col:nth-child(1) {
@@ -1466,10 +1505,16 @@ body {
     width: 100%;
     max-width: 100%;
     height: 56px;
-    background-color: var(--col-btn-main-bg) !important;
+    background-color: var(--col-btn-main-bg);
     color: var(--col-white) !important;
 }
 .MuiInputLabel-shrink {
+    font-size: 18px !important;
+    font-weight: 400 !important;
+    line-height: 18px !important;
+    color: var(--col-grey-black) !important;
+}
+.btn-grid2 > .MuiFormControl-root > .MuiInputLabel-shrink {
     font-size: 13px !important;
     font-weight: 600 !important;
     line-height: 16px !important;
@@ -1477,7 +1522,7 @@ body {
 }
 .MuiInputBase-input::placeholder {
     font-size: 14px;
-    font-weight: 400;
+    font-weight: 600;
     line-height: 18px;
     color: var(--col-grey-black);
 }
