--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -485,6 +485,9 @@
     .mobile-w {
         max-width: 90%;
     }
+    .pl-sub {
+        padding-left: 50px !important;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -912,6 +915,10 @@ body {
 }
 .pl-64 {
     padding-left: 64px;
+}
+.pl-sub {
+    padding-left: 85px;
+    word-break: break-all;
 }
 .mt-16 {
     margin-top: 16px;
