--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -918,7 +918,9 @@ body {
 }
 .pl-sub {
     padding-left: 85px;
-    word-break: break-all;
+}
+.txt-justify {
+    text-align: justify;
 }
 .mt-16 {
     margin-top: 16px;
